// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@style: ui component checks * default appearance styled properly 1`] = `
Object {
  "borderColor": "#A6AEBD",
  "borderRadius": 18,
  "borderWidth": 2,
  "height": 36,
  "highlightBackgroundColor": "transparent",
  "highlightBorderRadius": 30,
  "highlightHeight": 60,
  "highlightWidth": 60,
  "selectBackgroundColor": "transparent",
  "selectBorderRadius": 12,
  "selectHeight": 24,
  "selectWidth": 24,
  "textColor": "#000000",
  "textFontSize": 16,
  "textFontWeight": "500",
  "textMarginLeft": 12,
  "width": 36,
}
`;

exports[`@style: ui component checks * default appearance styled properly 2`] = `
Object {
  "borderColor": "#DDE1EB",
  "borderRadius": 18,
  "borderWidth": 2,
  "height": 36,
  "highlightBackgroundColor": "transparent",
  "highlightBorderRadius": 30,
  "highlightHeight": 60,
  "highlightWidth": 60,
  "selectBackgroundColor": "transparent",
  "selectBorderRadius": 12,
  "selectHeight": 24,
  "selectWidth": 24,
  "textColor": "#c8cedb",
  "textFontSize": 16,
  "textFontWeight": "500",
  "textMarginLeft": 12,
  "width": 36,
}
`;

exports[`@style: ui component checks * dispatch action works properly 1`] = `
Object {
  "borderColor": "#8992A3",
  "borderRadius": 18,
  "borderWidth": 2,
  "height": 36,
  "highlightBackgroundColor": "#DDE1EB",
  "highlightBorderRadius": 30,
  "highlightHeight": 60,
  "highlightWidth": 60,
  "selectBackgroundColor": "transparent",
  "selectBorderRadius": 12,
  "selectHeight": 24,
  "selectWidth": 24,
  "textColor": "#000000",
  "textFontSize": 16,
  "textFontWeight": "500",
  "textMarginLeft": 12,
  "width": 36,
}
`;

exports[`@style: ui component checks * provides correct styles on theme change 1`] = `
Object {
  "borderColor": "#A6AEBD",
  "borderRadius": 18,
  "borderWidth": 2,
  "height": 36,
  "highlightBackgroundColor": "transparent",
  "highlightBorderRadius": 30,
  "highlightHeight": 60,
  "highlightWidth": 60,
  "selectBackgroundColor": "transparent",
  "selectBorderRadius": 12,
  "selectHeight": 24,
  "selectWidth": 24,
  "textColor": "#000000",
  "textFontSize": 16,
  "textFontWeight": "500",
  "textMarginLeft": 12,
  "width": 36,
}
`;

exports[`@style: ui component checks * provides correct styles on theme change 2`] = `
Object {
  "borderColor": "#A6AEBD",
  "borderRadius": 18,
  "borderWidth": 2,
  "height": 36,
  "highlightBackgroundColor": "transparent",
  "highlightBorderRadius": 30,
  "highlightHeight": 60,
  "highlightWidth": 60,
  "selectBackgroundColor": "transparent",
  "selectBorderRadius": 12,
  "selectHeight": 24,
  "selectWidth": 24,
  "textColor": "#000000",
  "textFontSize": 16,
  "textFontWeight": "500",
  "textMarginLeft": 12,
  "width": 36,
}
`;
